<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="fill_parent"
   android:layout_width="fill_parent"
   android:padding="30dip"
   android:orientation="horizontal">
   <LinearLayout
      android:orientation="vertical"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_gravity="center" android:weightSum="1">
      <TextView
         android:text="@string/hello"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="25dip"
         android:textSize="24.5sp" />
      <Gallery android:layout_width="match_parent" android:id="@+id/gallery1" android:layout_height="wrap_content"></Gallery>
      <ImageView android:id="@+id/imageButton1" android:src="@drawable/gbnlogo" android:layout_gravity="bottom" android:layout_height="156dp" android:layout_width="match_parent" android:layout_weight="1.08"></ImageView>
      <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sites" android:id="@+id/sites_button"></Button>
      <Button android:layout_width="fill_parent" android:id="@+id/map_button" android:text="@string/map" android:layout_height="wrap_content"></Button>
      <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/schedules" android:id="@+id/schedules_button"></Button>
   </LinearLayout>
</LinearLayout>
